# minimal-wasm-project

./: Cargo.toml  index.js  package.json  webpack.config.js
src/: lib.rs
