[package]
name = "minimal"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.2"

[dependencies.web-sys]
version = "0.3.2"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'HtmlElement',
  'Node',
  'EventTarget',
  'KeyboardEvent'
]
